node-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs
  labels:
    app: react-nodejs-mysql
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: nodejs
    tier: backend
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs
  labels:
    app: react-nodejs-mysql
spec:
  selector:
    matchLabels:
      app: nodejs
      tier: backend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: nodejs
        tier: backend
    spec:
      containers:
      - image: mannmae/fullstack-nodejs:63
        name: nodejs
        ports:
        - containerPort: 8080
          name: nodejs
        volumeMounts:
        - name: nodejs-persistent-storage
          mountPath: /var/www/html
      volumes:
      - name: nodejs-persistent-storage
        persistentVolumeClaim:
          claimName: nodejs-pv-claim
