react-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: react
  labels:
    app: react
spec:
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: react
    tier: frontend
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react
  labels:
    app: react
spec:
  selector:
    matchLabels:
      app: react
      tier: frontend
  template:
    metadata:
      labels:
        app: react
        tier: frontend
    spec:
      containers:
      - image: mannmae/fullstack-react:0
        name: react
        ports:
        - containerPort: 3000
          name: react
