ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
    - http:
        paths:
        - path: /*
          pathType: ImplementationSpecific
          backend:
            service:
              name: react
              port:
                number: 80
        - path: /api/*
          pathType: ImplementationSpecific
          backend:
            service:
              name: nodejs
              port:
                number: 80
